versioned_docs/version-2025.2.5/professor/sabrina_kerkhoff.mdx
import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";

export const data = {
  "title": "Sabrina Kerkhoff",
  "base": "",
  "weekClasses": [
    {
      "dayName": "Segunda-Feira",
      "dayClasses": [
        {
          "subject": "Química I - 2564",
          "size": 2,
          "teachers": [
            "Sabrina Kerkhoff"
          ],
          "classroom": "",
          "students": [
            "IIW2026B"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Química I - 461",
          "size": 2,
          "teachers": [
            "Sabrina Kerkhoff"
          ],
          "classroom": "laboratorio_de_quimica",
          "students": [
            "AGO2026A"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "Química III - 1085",
          "size": 2,
          "teachers": [
            "Sabrina Kerkhoff"
          ],
          "classroom": "laboratorio_de_quimica",
          "students": [
            "AGO2024"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Terça-Feira",
      "dayClasses": [
        {
          "subject": "Química I - 461",
          "size": 2,
          "teachers": [
            "Sabrina Kerkhoff"
          ],
          "classroom": "laboratorio_de_quimica",
          "students": [
            "AGO2026B"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Química III - 1243",
          "size": 2,
          "teachers": [
            "Sabrina Kerkhoff"
          ],
          "classroom": "laboratorio_de_quimica",
          "students": [
            "IIW2023A"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "Química II - 618",
          "size": 2,
          "teachers": [
            "Sabrina Kerkhoff"
          ],
          "classroom": "laboratorio_de_quimica",
          "students": [
            "AGO2025"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        },
        {
          "subject": "Química I - 1068",
          "size": 2,
          "teachers": [
            "Sabrina Kerkhoff"
          ],
          "classroom": "laboratorio_de_quimica",
          "students": [
            "IIW2025A"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quarta-Feira",
      "dayClasses": [
        {
          "subject": "Química II - 2568",
          "size": 2,
          "teachers": [
            "Sabrina Kerkhoff"
          ],
          "classroom": "sala_02_-_cr_toledo",
          "students": [
            "IIW2024B"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quinta-Feira",
      "dayClasses": [
        {
          "subject": "Química II - 1230",
          "size": 2,
          "teachers": [
            "Sabrina Kerkhoff"
          ],
          "classroom": "sala_16-2",
          "students": [
            "IIW2024A"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Química I - 2326",
          "size": 2,
          "teachers": [
            "Sabrina Kerkhoff"
          ],
          "classroom": "laboratorio_de_quimica",
          "students": [
            "COM2025"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Sexta-Feira",
      "dayClasses": [
        {
          "subject": "Química III - 2555",
          "size": 2,
          "teachers": [
            "Sabrina Kerkhoff"
          ],
          "classroom": "sala_02_-_cr_toledo",
          "students": [
            "IIW2024B"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Química III - 2466",
          "size": 2,
          "teachers": [
            "Sabrina Kerkhoff"
          ],
          "classroom": "laboratorio_de_quimica",
          "students": [
            "COM2023"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Química II - 2568",
          "size": 2,
          "teachers": [
            "Sabrina Kerkhoff"
          ],
          "classroom": "sala_01_-_cr_toledo",
          "students": [
            "IIW2025B"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "Química II - 2422",
          "size": 2,
          "teachers": [
            "Sabrina Kerkhoff"
          ],
          "classroom": "sala_14-2",
          "students": [
            "COM2024"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        }
      ]
    }
  ],
  "time": [
    {
      "time": "07:30 - 08:20",
      "size": 50
    },
    {
      "time": "08:20 - 09:10",
      "size": 50
    },
    {
      "time": "09:25 - 10:15",
      "size": 50
    },
    {
      "time": "10:15 - 11:05",
      "size": 50
    },
    {
      "time": "11:05 - 11:55",
      "size": 50
    },
    {
      "time": "13:10 - 14:00",
      "size": 50
    },
    {
      "time": "14:00 - 14:50",
      "size": 50
    },
    {
      "time": "15:05 - 15:55",
      "size": 50
    },
    {
      "time": "15:55 - 16:45",
      "size": 50
    },
    {
      "time": "16:45 - 17:35",
      "size": 50
    },
    {
      "time": "19:00 - 19:50",
      "size": 50
    },
    {
      "time": "19:50 - 20:40",
      "size": 50
    },
    {
      "time": "21:00 - 21:50",
      "size": 50
    },
    {
      "time": "21:50 - 22:40",
      "size": 50
    }
  ]
}

# Sabrina Kerkhoff

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>

<div style={{
  border: '1px solid #ddd',
  borderRadius: '8px',
  padding: '16px',
  marginTop: '24px',
  backgroundColor: '#f9f9f9'
}}>
  <h2 style={{
    borderBottom: '2px solid #ccc',
    paddingBottom: '8px',
    marginBottom: '16px'
  }}>Informações do Docente</h2>
  <p><strong>Cargo/Função:</strong> {data.teacherInfo.role}</p>
  <p><strong>Horário de Atendimento aos Alunos:</strong> {data.teacherInfo.officeHours}</p>
  <p><strong>Observações:</strong> {data.teacherInfo.notes}</p>
</div>

